<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    tools:context=".ui.Fragments.SettingFragments.settingsFragment">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="General"
        android:textColor="?attr/Text_Color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"

        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="#D6D6D6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/LockApp"
        style="@style/Settingtext"
        android:layout_marginTop="16dp"
        android:text="@string/lock_app"
        app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_right_24"
        app:drawableTint="?attr/Text_Color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/lockInstructions"
        style="@style/Settingtext"
        android:layout_marginTop="2dp"
        android:text="@string/lock_instruction"
        android:textSize="16sp"
        android:textColor="@color/instructionColor"
        app:drawableTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LockApp" />

    <TextView
        android:id="@+id/Vault"
        style="@style/Settingtext"
        android:layout_marginTop="16dp"
        android:text="Secure Vault"
        app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_right_24"
        app:drawableTint="?attr/Text_Color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lockInstructions" />

    <TextView
        android:id="@+id/VaultInstructions"
        style="@style/Settingtext"
        android:layout_marginTop="2dp"
        android:text="Keep your media secured by adding it to vault "
        android:textSize="16sp"
        android:textColor="@color/instructionColor"
        app:drawableTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Vault" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/DarkTheme"
        style="@style/Settingtext"
        android:layout_marginTop="@dimen/_5sdp"
        android:checked="true"
        android:text="@string/dark_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/VaultInstructions" />

    <RelativeLayout
        android:id="@+id/playbackLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DarkTheme">

        <TextView
            android:id="@+id/playback_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/playbackSwitch"
            android:text="@string/remember_last_video_playback"
            android:textColor="?attr/Text_Color"
            />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/playbackSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/playbackInstructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/playback_txt"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_toStartOf="@+id/playbackSwitch"
            android:text="Save the position of last video and play it back when show it again"
            android:textColor="@color/instructionColor"
            android:textSize="16sp"
            app:drawableTint="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/playbackSwitch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playback_txt" />
    </RelativeLayout>

    <TextView
        android:id="@+id/shareApp"
        style="@style/Settingtext"
        android:layout_marginTop="16dp"
        android:text="@string/share"
        app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_right_24"
        app:drawableTint="?attr/Text_Color"
        android:padding="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SliderInstructions" />

    <TextView
        android:id="@+id/rateApp"
        style="@style/Settingtext"
        android:layout_marginTop="16dp"
        android:text="Rate"
        android:padding="@dimen/_8sdp"
        app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_right_24"
        app:drawableTint="?attr/Text_Color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shareApp" />

    <TextView
        android:id="@+id/Slider"
        style="@style/Settingtext"
        android:layout_marginTop="16dp"
        android:text="Auto Slider"
        app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_right_24"
        app:drawableTint="?attr/Text_Color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playbackLayout" />

    <TextView
        android:id="@+id/SliderInstructions"
        style="@style/Settingtext"
        android:layout_marginTop="2dp"
        android:text="Change Auto Slider For medias settings. "
        android:textSize="16sp"
        android:textColor="@color/instructionColor"
        app:drawableTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Slider" />

</androidx.constraintlayout.widget.ConstraintLayout>